--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -77,6 +77,7 @@
       line-height: 15px
       color: $primary
       margin-bottom: 10px
+      text-align:  center
     &__date
       max-width: 97px
       font-style: normal
